<resources>
    <string name="app_name">Coding Challenge 02.2</string>
    <string name="shopping_list">Shopping List</string>
    <string name="add1">Add Item 1</string>
    <string name="add2">Add Item 2</string>
    <string name="add3">Add Item 3</string>
    <string name="add4">Add Item 4</string>
    <string name="add5">Add Item 5</string>

    <string name="add6">Add Item 6</string>
    <string name="add7">Add Item 7</string>
    <string name="add8">Add Item 8</string>
    <string name="add9">Add Item 9</string>
    <string name="add10">Add Item 10</string>

    <string name="shopping_list_full">Shopping List is Full!\nMaximum is 10 items!\nKindly scroll to view the 10 items!</string>

    <!--Shopping Items-->
    <string name="title">Common Shopping List Items</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="apples">Apples</string>
    <string name="pasta">Pasta</string>
    <string name="bread">Bread</string>
    <string name="cereals">Cereals</string>
    <string name="eggs">Eggs</string>
    <string name="milk">Milk</string>
    <string name="meat">Meat</string>
    <string name="seafood">Seafood</string>
    <string name="vegetables">Vegetables</string>
    <string name="snacks">Snacks</string>
    <string name="crackers">Crackers</string>
    <string name="Coca_cola">Coca-cola</string>
    <string name="pepsi">Pepsi</string>
</resources>
